//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Customer {
  id Int [pk, increment]
  name String [not null]
  surname String [not null]
  username String [unique, not null]
  shippingAddress String [not null]
  password String [not null]
  balance Int [not null]
  location String [not null]
  purchases Purchase [not null]
}

Table Seller {
  id Int [pk, increment]
  companyName String [not null]
  username String [unique, not null]
  password String [not null]
  bankAccount String [not null]
  sellings Selling [not null]
}

Table Admin {
  id Int [pk, increment]
  username String [unique, not null]
  password String [not null]
}

Table Selling {
  id Int [pk, increment]
  sellerId Int [not null]
  itemId Int [not null]
  quantity Int [not null]
  seller Seller [not null]
  item Item [not null]
  purchase Purchase [not null]
}

Table Purchase {
  id Int [pk, increment]
  customerId Int [not null]
  sellingId Int
  itemId Int [not null]
  quantity Int [not null]
  date DateTime [not null]
  location String [not null]
  customer Customer [not null]
  item Item [not null]
  selling Selling
}

Table Category {
  id Int [pk, increment]
  name String [not null]
  items Item [not null]
}

Table Item {
  id Int [pk, increment]
  name String [not null]
  price Int [not null]
  image String [not null]
  quantity Int [not null]
  categoryId Int [not null]
  category Category [not null]
  purchases Purchase [not null]
  sellings Selling [not null]
}

Ref: Selling.sellerId > Seller.id [delete: Cascade]

Ref: Selling.itemId > Item.id [delete: Cascade]

Ref: Purchase.customerId > Customer.id [delete: Cascade]

Ref: Purchase.itemId > Item.id [delete: Cascade]

Ref: Purchase.sellingId > Selling.id [delete: Set Null]

Ref: Item.categoryId > Category.id [delete: Cascade]